MDEV-34374 Shrinking tablespace logic fails to handle error condition

- InnoDB ignores the error while traversing the used
extents during shrinking process. Made changes in
fsp_traverse_extents() to handle error condition
correctly